// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlaylistItems > matches the snapshot 1`] = `
"<ul class="mBM">
  <li>
    <h4 class="strong mBM sidebarTitle">Playlist</h4>
    <ul></ul>
  </li>
  <li><button class="centerItems buttonLink centerAll fullWidth sidebarLink sidebarLink" type="button" title="Add playlist">
      <phlistplus aria-hidden="true" class="icon" size="24" weight="regular"></phlistplus><span class="clamp text"> Add playlist </span>
    </button></li>
</ul>"
`;

exports[`PlaylistItems > when playlist value returns playlists > matches the snapshot 1`] = `
"<ul class="mBM">
  <li>
    <h4 class="strong mBM sidebarTitle">Playlist</h4>
    <ul>
      <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="playlist-0">
          <phplaylist aria-hidden="true" class="icon" size="24" weight="regular"></phplaylist><span class="clamp text">playlist-0</span>
        </a></li>
      <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="playlist-1">
          <phplaylist aria-hidden="true" class="icon" size="24" weight="regular"></phplaylist><span class="clamp text">playlist-1</span>
        </a></li>
    </ul>
  </li>
  <li><button class="centerItems buttonLink centerAll fullWidth sidebarLink sidebarLink" type="button" title="Add playlist">
      <phlistplus aria-hidden="true" class="icon" size="24" weight="regular"></phlistplus><span class="clamp text"> Add playlist </span>
    </button></li>
</ul>"
`;

exports[`PlaylistItems > when playlist value returns playlists > when playlist value returned is more than 8 > matches the snapshot 1`] = `
"<ul class="mBM">
  <li>
    <h4 class="strong mBM sidebarTitle">Playlist</h4>
    <ul>
      <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="playlist-0">
          <phplaylist aria-hidden="true" class="icon" size="24" weight="regular"></phplaylist><span class="clamp text">playlist-0</span>
        </a></li>
      <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="playlist-1">
          <phplaylist aria-hidden="true" class="icon" size="24" weight="regular"></phplaylist><span class="clamp text">playlist-1</span>
        </a></li>
      <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="playlist-2">
          <phplaylist aria-hidden="true" class="icon" size="24" weight="regular"></phplaylist><span class="clamp text">playlist-2</span>
        </a></li>
      <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="playlist-3">
          <phplaylist aria-hidden="true" class="icon" size="24" weight="regular"></phplaylist><span class="clamp text">playlist-3</span>
        </a></li>
      <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="playlist-4">
          <phplaylist aria-hidden="true" class="icon" size="24" weight="regular"></phplaylist><span class="clamp text">playlist-4</span>
        </a></li>
      <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="playlist-5">
          <phplaylist aria-hidden="true" class="icon" size="24" weight="regular"></phplaylist><span class="clamp text">playlist-5</span>
        </a></li>
      <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="playlist-6">
          <phplaylist aria-hidden="true" class="icon" size="24" weight="regular"></phplaylist><span class="clamp text">playlist-6</span>
        </a></li>
      <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="playlist-7">
          <phplaylist aria-hidden="true" class="icon" size="24" weight="regular"></phplaylist><span class="clamp text">playlist-7</span>
        </a></li>
    </ul>
  </li>
  <li><button class="centerItems buttonLink centerAll fullWidth sidebarLink sidebarLink" type="button" title="Add playlist">
      <phlistplus aria-hidden="true" class="icon" size="24" weight="regular"></phlistplus><span class="clamp text"> Add playlist </span>
    </button></li>
</ul>"
`;
